force-app/main/default/objects/maps__TPComment__c/maps__TPComment__c.object-meta.xml
<CustomObject>
    <label>Territory Planning Comment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>