force-app/main/default/objects/maps__TPComment__c/fields/maps__Area__c.field-meta.xml
<CustomField>
    <fullName>maps__Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>maps__TPArea__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>