force-app/main/default/objects/maps__TPComment__c/fields/maps__ChatterItemId__c.field-meta.xml
<CustomField>
    <fullName>maps__ChatterItemId__c</fullName>
    <description>Text Id that points to a Chatter Item</description>
    <label>ChatterItemId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>